--- a/PartyLifeManager/MasterPage.master
+++ b/PartyLifeManager/MasterPage.master
@@ -8,6 +8,7 @@
     <asp:ContentPlaceHolder id="head" runat="server">
     </asp:ContentPlaceHolder>
     <link rel="stylesheet" type="text/css" href="StyleSheet.css"/>
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=PT+Sans">
 </head>
 <body>
     <form id="form1" runat="server">
